# rust-cli-template

./: Cargo.toml  readme.md
src/: clilib.rs  main.rs
